# refinery

./: .gitignore  Cargo.toml  Makefile  README.md  action.yml  go.mod  go.sum  install-hooks  install-hooks.sh  refinery.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  refinery-binaries.yml  refinery-build.yml  refinery.yml  release.yml  reusable-build.yml  smoke-test.yml  sync-wiki.yml  update-constants.yml  upload-artifacts.yml
ci/: action.yml
cmd/refinery/: main.go  main_test.go
docs/: ARCHITECTURES_AND_ABIS.md  CI_INTEGRATION.md  CONFIGURATION.md  GETTING_STARTED.md  HOOKS.md  PACKAGING.md  README.md  _Sidebar.md
hooks/: pre-commit  pre-commit.sh  pre-push
internal/app/: registry.go  registry_test.go
internal/cli/: build.go  cli_test.go  init.go  migrate.go  root.go
internal/config/: config.go  config_test.go  config_test_extra.go  extra_test.go
internal/engine/: engine.go  engine_test.go  rust.go  rust_test.go
internal/pipeline/: pipeline.go  pipeline_test.go
internal/ui/: ui.go  ui_test.go
scripts/: smoke-test.sh
src/: errors.rs  lib.rs  main.rs  ui.rs
src/commands/: build.rs  config.rs  edit.rs  forge.rs  init.rs  mod.rs  release.rs  setup.rs
src/core/: builder.rs  config.rs  mod.rs  project.rs  release.rs  schema.rs  workflow.rs
src/ui/: components.rs  icons.rs  macros.rs  mod.rs
tests/: go_smoke_test.go  integration_test.go
tests/smoke/rust-project/: Cargo.toml  LICENSE.rtf  build.rs  refinery.toml
tests/smoke/rust-project/src/: lib.rs  main.rs
tests/smoke/rust-project/wix/: main.wxs
wix/: main.wxs
(+54 files in other folders)
